--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -6,16 +6,17 @@ spring:
           google: 
            client-id: 254817594130-5d9f1pmichclauum2ce7insktcvarfok.apps.googleusercontent.com
            client-secret: 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
-           
-       	  linkedin: 
-       	    client-id: 
-       	    client-secret: 
-       	    client-authentication-method: 
-       	    authorization-grant-type: 
-       	    redirect-uri: 
-       	    scope:
-       	    client-name: 
-            
-
-            
-            
+          linkedin: 
+           client-id: 77odslfd6flazo
+           client-secret: gwAaaGqk6y5BfS2A
+           client-authentication-method: client_secret_post
+           authorization-grant-type: authorization_code
+           redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
+           scope: r_emailaddress, r_liteprofile
+           client-name: Linkedin
+        provider:
+          linkedin:
+           token-uri: https://www.linkedin.com/oauth/v2/accessToken
+           authorization-uri: https://www.linkedin.com/oauth/v2/authorization
+           user-info-uri: https://api.linkedin.com/v2/me
+           user-name-attribute: id
